
syntax = "proto3";

option go_package = ".;main";


message ChatInfo{
    string content=1;
}

service Chat{
    rpc ServerStreamingChat(ChatInfo) returns (stream ChatInfo){}
    rpc ClientStreamingChat(stream ChatInfo) returns (ChatInfo){}
    rpc ClientServerChat(stream ChatInfo) returns(stream ChatInfo){}
    rpc GroupChat(stream ChatInfo) returns(stream ChatInfo){}
}

